--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7,6 +7,8 @@
 
 body {
   min-height: 100vh;
+  background: url('../assets/imagens/images.jpeg');
+  background-size: cover;
   line-height: 1.6;
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
